--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -7,10 +7,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
+
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -210,65 +211,65 @@
             </div>
 
 
-            <p></p>
-            <ul class="menu" >
-                <li> <a href=#>Личный кабинет </a>
-                    <ul class="submenu">
-                        @if(login.isEmpty) {
-                            <li><a href="#win1" class="button button-green">Вход</a></li>
-                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
-                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
-                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
-                        }
-                        @if(!(login.isEmpty)) {
-                            <li><a href="@routes.LoginController.logout()">Выход</a></li>
-                        }
 
-                    </ul>
-                </li>
+        <p></p>
+        <ul class="menu" >
+            <li> <a href=#>Личный кабинет </a>
+                <ul class="submenu">
+                    @if(login.isEmpty) {
+                        <li><a href="#win1" class="button button-green">Вход</a></li>
+                        <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                        @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
+                        @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
+                    }
+                    @if(!(login.isEmpty)) {
+                        <li><a href="@routes.LoginController.logout()">Выход</a></li>
+                    }
 
-            </ul>
-            <ul id="nav">
+                </ul>
+            </li>
 
-
-                <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.SaleController.showSales) {
-                    <input type="submit" value="Акции">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог">
-                    }</a>
-                </li>
-                <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
-
-                    <input type="submit" value="О проекте">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина">
-                    }</a></li>
-
-                <li><a>@helper.form(action = routes.BasketController.basketPage) {
-                    <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное">
-                    }</a></li>
-                @if(isAdmin) {
-                    @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
-                    <li><a href="#win3" class="button button-green">Добавить товар</a></li>
-                    <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
-                }
+        </ul>
+        <ul id="nav" >
 
 
-            </ul>
-            <p></p>
-            <p></p>
-            <p></p>
+            <li><a>@helper.form(action = routes.ContactController.contactPage) {
+                <input type="submit" value="Контакты" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.SaleController.showSales) {
+                <input type="submit" value="Акции" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.WineController.catalogPage) {
+                <input type="submit" value="Каталог" class="button_menu">
+                }</a>
+            </li>
+            <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
+                <input type="submit" value="О проекте" class="button_menu">
+                }</a></li>
+
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="0">
+                <input type="submit" value="Корзина" class="button_menu">
+                }</a></li>
+
+            <li><a>@helper.form(action = routes.BasketController.basketPage) {
+                <input type="hidden" name="numberSql" value="1">
+                <input type="submit" value="Избранное"  class="button_menu">
+                }</a></li>
+            @if(isAdmin) {
+                @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
+                <li><a href="#win3" class="button button-green">Добавить товар</a></li>
+                <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
+            }
+
+
+        </ul>
+        <p></p>
+        <p></p>
+        <p></p>
                 @*вывод колонки*@
             @colomn(i: Int) = @{
                 val it = nameColomn
@@ -314,7 +315,8 @@
                                     <li>
                                         <div class="product">
                                             <a href="#" class="product-img">
-                                                <img src=@item.getLinkForProduct(item.getIdProduct) alt="" height="400" ></a>
+                                                <img src=@item.getLinkForProduct(item.getIdProduct) alt="" style="height: 300px;
+                                                align-content: center"></a>
                                             <p class="wineName">@item.getName</p>
 
 
@@ -404,48 +406,79 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <p>
+
+                                            @if(!(login.isEmpty) && (isAdmin==false )) {
+                                                <div class="layer1-admin">
+                                                @if(item.isAddingToBasket(item.getIdProduct,login)==login) {
+                                                    @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
+                                                        <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                            height: 50px">
+                                                            <span class="glyphicon glyphicon-shopping-cart" ></span>
+                                                        </button>
+                                                    }
+                                                }
+                                                </div>
+                                                @if(item.isAddingToBasket(item.getIdProduct,login)!=login){
+                                                    <p text-align="left">Добавлен в корзину.</p>
+                                                }
+                                                <div class="layer2-admin">
+                                                @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
+                                                    @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
+                                                        <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                            height: 50px">
+                                                            <span class="glyphicon glyphicon-heart" ></span>
+                                                        </button>
+                                                    }
+                                                }
+                                                </div>
+
+                                                @if(item.isAddingToFavorite(item.getIdProduct,login)!=login){
+                                                    <p text-align="left">Добавлен в избранное.</p>
+                                                }
+                                            }
+
+
                                                 <div class="product-buttons">
-                                                @if(!(login.isEmpty)) {
-                                                    <div class="layer1-button">
-                                                    @if(item.isAddingToBasket(item.getIdProduct,login)==login) {
-                                                        @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
-                                                            <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
-                                                                height: 50px">
-                                                                <span class="glyphicon glyphicon-shopping-cart" ></span>
-                                                            </button>
+                                                    @if(!(login.isEmpty) && (isAdmin ==true)) {
+                                                        <div class="layer1-button">
+                                                            @if(item.isAddingToBasket(item.getIdProduct,login)==login) {
+                                                                @helper.form(action = routes.BasketController.addIn(item.getIdProduct)) {
+                                                                    <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                                        height: 50px">
+                                                                        <span class="glyphicon glyphicon-shopping-cart" ></span>
+                                                                    </button>
+                                                                }
+                                                            }
+                                                        </div>
+                                                        @if(item.isAddingToBasket(item.getIdProduct,login)!=login){
+                                                            <p text-align="left">Добавлен в корзину.</p>
+                                                        }
+                                                        <div class="layer2-button">
+                                                            @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
+                                                                @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
+                                                                    <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                                        height: 50px">
+                                                                        <span class="glyphicon glyphicon-heart" ></span>
+                                                                    </button>
+                                                                }
+                                                            }
+                                                        </div>
+
+                                                        @if(item.isAddingToFavorite(item.getIdProduct,login)!=login){
+                                                            <p text-align="left">Добавлен в избранное.</p>
                                                         }
                                                     }
-                                                    </div>
-                                                    @if(item.isAddingToBasket(item.getIdProduct,login)!=login){
-                                                        <p text-align="left">Добавлен в корзину.</p>
+                                                    @if(login.isEmpty){
+                                                        <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                            height: 50px" disabled>
+                                                            <span class="glyphicon glyphicon-shopping-cart" ></span>
+                                                        </button>
+                                                        <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
+                                                            height: 50px" disabled>
+                                                            <span class="glyphicon glyphicon-heart" ></span>
+                                                        </button>
                                                     }
-                                                    <div class="layer2-button">
-                                                    @if(item.isAddingToFavorite(item.getIdProduct,login)==login) {
-                                                        @helper.form(action = routes.BasketController.addInFavorite(item.getIdProduct)) {
-                                                            <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
-                                                                height: 50px">
-                                                                <span class="glyphicon glyphicon-heart" ></span>
-                                                            </button>
-                                                        }
-                                                    }
-                                                    </div>
-                                                    @if(item.isAddingToFavorite(item.getIdProduct,login)!=login){
-                                                        <p text-align="left">Добавлен в избранное.</p>
-                                                    }
-                                                }
-                                                @if(login.isEmpty){
-                                                    <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
-                                                        height: 50px" disabled>
-                                                        <span class="glyphicon glyphicon-shopping-cart" ></span>
-                                                    </button>
-                                                    <button type="submit" class="btn btn-default btn-sm" style="width: 50px;
-                                                        height: 50px" disabled>
-                                                        <span class="glyphicon glyphicon-heart" ></span>
-                                                    </button>
-                                                }
                                                  </div>
-                                                </p>
                                         </div>
                                     </li>
                                 }
