--- a/app/views/salesPage.scala.html
+++ b/app/views/salesPage.scala.html
@@ -6,6 +6,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
@@ -147,37 +148,43 @@
                 </li>
 
             </ul>
-            <ul id="nav">
+            <ul id="nav" >
 
 
                 <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                    <input type="submit" value="Контакты">
+                    <input type="submit" value="Контакты" class="button_menu">
+                    }</a>
+                </li>
+                <li><a>@helper.form(action = routes.SaleController.showSales) {
+                    <input type="submit" value="Акции" class="button_menu">
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                    <input type="submit" value="Каталог">
+                    <input type="submit" value="Каталог" class="button_menu">
                     }</a>
                 </li>
                 <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
-                    <input type="submit" value="О проекте">
+                    <input type="submit" value="О проекте" class="button_menu">
                     }</a></li>
+
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="0">
-                    <input type="submit" value="Корзина">
+                    <input type="submit" value="Корзина" class="button_menu">
                     }</a></li>
 
                 <li><a>@helper.form(action = routes.BasketController.basketPage) {
                     <input type="hidden" name="numberSql" value="1">
-                    <input type="submit" value="Избранное">
+                    <input type="submit" value="Избранное"  class="button_menu">
                     }</a></li>
                 @if(isAdmin) {
+
                     <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
-                    <li><a href="#win3" class="button button-green" >Добавить акцию</a></li>
                 }
 
 
             </ul>
+
             <br>
             <br>
             <p></p>
@@ -188,17 +195,21 @@
 
 
 
-
+<table class="favorite">
+    <td>
             <div id="main"><!— Основной раздел содержимого —>
 
                 <section id="content"><!— Основной подраздел содержимого —>
-
-
                     <div id="left">
+                        @if(isAdmin){
+                    <div id="sale">
+
 
                         <ul>
                         @Sale.map { item =>
                             <li>
+
+                                <div class="product-sale">
                                 <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
                                 <div class="info">
 
@@ -210,9 +221,8 @@
                                     @*<span class="st">Our price:</span><strong>$550.00</strong>*
                                     @*</div>*@
 
-                                    @if(isAdmin){
-                                        <div class="actions">
 
+                                        <div class="actions">
 
                                             @helper.form(action = routes.SaleController.changeSale(item.getIdSales)) {
                                                 <p><textarea rows="1" cols="25" name="getHead" style="color: black" >@item.getHead</textarea></p>
@@ -224,8 +234,6 @@
                                                 <input type="submit" class="btn btn-danger"   value="Удалить" />
                                             }
 
-
-
                                             @helper.form(action = routes.SaleController.upload(item.getIdSales), 'enctype -> "multipart/form-data") {
 
                                                 <input type="file" name="picture">
@@ -236,24 +244,45 @@
 
                                             }
 
-
-
-
-
-
                                         </div>
 
                                     }
 
+
+
+                                </div>
                                 </div>
 
                             </li>
 
-                        }
+
+
                         </ul>
+                    </div>
+                        }
+                        @if(!isAdmin){
+                        <div id="sale-user">
+                            <ul>
+                                @Sale.map { item =>
+                                    <li>
+                                            <div class="product-sale-user">
+                                                <div class="img"><a href="#"><img alt="" src=@item.getLinkForProduct(item.getIdSales)></a></div>
+                                                <div class="info">
+                                                        <p style="color:#da0505; font-family: 'Comic Sans MS'; font-size: 15px"> <u>@item.getHead</u></p>
+                                                        <p style="font-family: 'Comic Sans MS'">@item.getText</p>
+                                                </div>
+                                            </div>
+
+                                     </li>
+                                }
+                            </ul>
+                        </div>
+                        }
                     </div>
                 </section>
             </div>
+    </td>
+</table>
         </div>
     </body>
 </html>
