--- a/app/views/updateWine.scala.html
+++ b/app/views/updateWine.scala.html
@@ -10,16 +10,17 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/Search.css")">
+        @*<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/style.css")">*@
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
         <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
-    <body>
+    <body style="background:  #d93639; font-family: 'Comic Sans MS'">
         @*<a href="@routes.WineController.catalogPage(login,true)" class = "link">На главную страницу </a>*@
-        <h1 class="g1">Редактирование товара</h1>
+        <h1 class="g1">Редактировать товар</h1>
+        <hr color="white" size="6px">
 
         @helper.form(action = routes.WineController.updateWineInfo(win.getIdProduct), 'id -> "slick-login"){
 
@@ -64,8 +65,9 @@
                 </tr>
             </table>
 
+            <hr color="white" size="6px">
 
-            <input type ="submit" value="Применить">
+            <input type ="submit" value="Применить" >
             }
     </body>
 </html>
