--- a/app/views/users.scala.html
+++ b/app/views/users.scala.html
@@ -4,10 +4,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
+
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -103,26 +104,26 @@
         <ul id="nav">
 
             <li><a>@helper.form(action = routes.ContactController.contactPage) {
-                <input type="submit" value="Контакты">
+                <input type="submit" value="Контакты" class="button_menu">
                 }</a>
             </li>
             <li><a>@helper.form(action = routes.WineController.catalogPage) {
-                <input type="submit" value="Каталог">
+                <input type="submit" value="Каталог" class="button_menu">
                 }</a>
             </li>
             <li><a>@helper.form(action = routes.AuxiliaryController.projectPage2) {
 
-            <input type="submit" value="О проекте">
+            <input type="submit" value="О проекте" class="button_menu">
             }</a>
         </li>
             <li><a>@helper.form(action = routes.BasketController.basketPage) {
                 <input type="hidden" name="numberSql" value="0">
-                <input type="submit" value="Корзина">
+                <input type="submit" value="Корзина" class="button_menu">
                 }</a></li>
 
             <li><a>@helper.form(action = routes.BasketController.basketPage) {
                 <input type="hidden" name="numberSql" value="1">
-                <input type="submit" value="Избранное">
+                <input type="submit" value="Избранное" class="button_menu">
                 }</a></li>
 
         <li><a href="@routes.UsersController.usersList()">Список пользователей </a></li>
@@ -143,26 +144,28 @@
     it(i)
 }
 
-<ul>
-    <table>
+
+    <table class="user"  >
         <tr>
         @for(j <- 1 to sizeNameColomn) {
-            <th>@colomn(j - 1)</th>
+            <th style="border: 1px solid white">@colomn(j - 1)</th>
         }
         </tr>
         @users.map { item =>
-            <th>@item.getId</th>
-            <th>@item.getLogin</th>
-            <th>@item.getPassword</th>
-            <th>@item.getAdmin</th>
 
-            <th><a href="@routes.UsersController.renderUpdateUserInfo(item.getId)">Редактировать</a>
+            <th style="border: 1px solid white">@item.getId</th>
+            <th style="border: 1px solid white">@item.getLogin</th>
+            <th style="border: 1px solid white">@item.getPassword</th>
+            <th style="border: 1px solid white">@item.getAdmin</th>
+
+
+            <th style="border: 1px solid white"><a href="@routes.UsersController.renderUpdateUserInfo(item.getId)">Редактировать</a>
                 <a href="@routes.UsersController.deleteUser(item.getId)" > Удалить </a></th>
             <tr></tr>
         }
 
     </table>
-</ul>
 
+        </div>
 </body>
 </html>
